@@ -311,6 +311,7 @@ Joerg Sonnenberger                  joerg@britannica.bec.de
 Joey Hess                           joeyh@debian.org
 Johan Boule                         bohan@bohan.dyndns.org
 Johan Danielsson                    joda@pdc.kth.se
+Johannes Altmanninger               aclopte@gmail.com
 John Bley                           jbb6@acpub.duke.edu
 John Gatewood Ham                   zappaman@alphabox.compsci.buu.ac.th
 John Gotts                          jgotts@umich.edu
